css/styles.css
body {
  font-family: "Roboto", sans-serif;
  color: #434455;
  background-color: #fff;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

a {
  text-decoration: none;
}

a:hover {
  color: #404bbf;
}

ul,
ol {
  list-style-type: none;
  margin: 0;
  padding-left: 0;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

.container {
  max-width: 1158px;
  padding: 0 15px;
  margin: 0 auto;
}

.page-header {
  border-bottom: 1px solid #e7e9fc;
}

.header-container {
  display: flex;
  align-items: center;
}

.header-nav {
  display: flex;
  align-items: center;
}

.nav-list {
  display: flex;
  align-items: center;
  gap: 40px;
}

.contacts-list {
  display: flex;
  align-items: center;
  gap: 40px;
}

.header-logo {
  padding: 24px 0px;
  margin-right: 76px;
}

.logo {
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
}

.logo .logo-dark {
  color: #2e2f42;
}

.logo .logo-dark:hover,
.logo .logo-dark:focus,
.nav-item:focus {
  color: #404bbf;
}

.button:hover {
  background-color: #404bbf;
}

.button:focus {
  background-color: #404bbf;
}

.logo .logo-light {
  color: #f4f4fd;
}

.address-contacts {
  margin-left: auto;
  font-style: normal;
}
.nav-item {
  font-family: inherit;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #2e2f42;
  display: block;
  padding: 24px 0px;
}

.nav-contacts {
  font-family: inherit;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
  display: block;
  padding: 24px 0px;
}

.nav-item:hover,
.nav-contacts:hover,
.nav-contacts:focus {
  color: #404bbf;
}

.section-title-container {
  width: auto;
}

.page-title {
  font-family: inherit;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  text-align: center;
  color: #fff;
  background-color: #2e2f42;
  max-width: 496px;
  margin: 0 auto;
  justify-content: center;
}

.button {
  font-family: inherit;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #fff;
  background-color: #4d5ae5;
  cursor: pointer;
  border: none;
  border-radius: 4px;
  padding: 16px 32px;
  min-width: 169px;
  height: 56px;
  display: block;
  align-items: flex-start;
  justify-content: center;
  flex-direction: row;
  margin: 48px auto 0px;
  gap: 10px;
}

.subtitle {
  font-family: inherit;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
}

.subtitle-team,
.subtitle-portfolio {
  text-transform: capitalize;
  min-width: 218px;
  margin: 0px auto;
  margin-bottom: 72px;
}

.principles-subtitle {
  font-family: inherit;
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  text-align: left;
  color: #2e2f42;
  margin-bottom: 8px;
}

.principles-item {
  width: 264px;
}

.principles-text {
  font-family: inherit;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
  text-align: left;
}

.section-title {
  background-color: #2e2f42;
  padding-top: 188px;
  padding-bottom: 188px;
}

.section-principles {
  padding: 120px 0px;
  background-color: inherit;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.principles-list {
  display: flex;
  justify-content: center;
  gap: 24px;
}

.section-team {
  background-color: #f4f4fd;
  padding: 120px 0px;
}

.subtitle-team {
  min-width: 162px;
  margin: 0px auto;
  margin-bottom: 72px;
}
.team-list {
  display: flex;
  flex-wrap: wrap;
  gap: 24px;
}

.team-card {
  padding: 32px 0px;
}

.team-item {
  background-color: #fff;
  /* align-items: center;
  justify-content: center; */
  /* flex-direction: column; */
  gap: 24px;
  border-radius: 0px 0px 4px 4px;
}

.section-portfolio {
  padding: 120px 0px;
}

.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  column-gap: 24px;
  row-gap: 48px;
}

/* .portfolio-item {
  width: calc((100% - 48px) / 3);
} */

.portfolio-card {
  /* align-items: flex-start;
  justify-content: center;
  flex-direction: column; */
  border-bottom: 1px solid #e7e9fc;
  border-left: 1px solid #e7e9fc;
  border-right: 1px solid #e7e9fc;

  gap: 24px;
  padding: 32px 16px;
}

.portfolio-subtitle,
.team-subtitle {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 8px;
}

.portfolio-text,
.team-text {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

.text-center {
  text-align: center;
}
.footer {
  background-color: #2e2f42;
  padding: 100px 0px;
}

.footer-logo {
  display: inline-block;
  margin-bottom: 16px;
}

.footer-text {
  color: #f4f4fd;
  width: 264px;
  text-align: left;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

